# serialib

./: .gitignore  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  main.cpp
examples/example2/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/serialib/: serialib.h
lib/source/: serialib.cpp
